--- a/NTUCalGen/Web.config
+++ b/NTUCalGen/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2"/>
+    <compilation debug="false" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2" requestValidationMode="2.0"/>
     <pages validateRequest="false" />
   </system.web>
@@ -23,4 +23,17 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Redirect requests to preferred domain" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAny">
+            <add input="{HTTP_HOST}" pattern="^ntucalgen.azurewebsites.net$" />
+          </conditions>
+          <action type="Redirect" url="https://ntucalgen.cczy.io/{R:0}" appendQueryString="true" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
